I just put put add some authentication, no one can access the dashoard or any other servlet

--- a/COMP3095_CRAP/.settings/org.eclipse.wst.common.component
+++ b/COMP3095_CRAP/.settings/org.eclipse.wst.common.component
@@ -5,6 +5,7 @@
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/servlets"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/functions"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/filters"/>
                 
         <property name="context-root" value="COMP3095_CRAP"/>
                 
